# sirpo2

./: 3  README.md
GNUmake/: Makefile  docfile  foo.c  foo.h  main.c
GNUmake/dir/: exe
GNUmake/documentation/html/: files.html  foo_8c.html  foo_8h.html  foo_8h_source.html  globals.html  globals_func.html  index.html  main_8c.html
GNUmake/documentation/html/search/: all_0.js  files_0.js  functions_0.js
GNUmake/documentation/latex/: files.tex  foo_8c.tex  foo_8h.tex  main_8c.tex  refman.tex
autotools/: Makefile  Makefile.am  Makefile.in  asdasd  config.status  configure  configure.in
autotools/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
autotools/doc/: Makefile  Makefile.am  Makefile.in  foo.info
autotools/src/: Makefile  Makefile.am  Makefile.in  foo
autotools/src/.deps/: foo.Po  main.Po
